2006-10-11  Oliver Hunt  <oliver@apple.com>

Reviewed by Adam.

        Fix for http://bugs.webkit.org/show_bug.cgi?id=11251
        Corrects canvas tag to not throw JS exception when drawing
        zero sized rects, arcs, etc

        * html/CanvasRenderingContext2D.cpp:
        (WebCore::CanvasRenderingContext2D::arcTo):
        (WebCore::CanvasRenderingContext2D::arc):
        (WebCore::CanvasRenderingContext2D::rect):
        (WebCore::CanvasRenderingContext2D::clearRect):
        (WebCore::CanvasRenderingContext2D::fillRect):
        (WebCore::CanvasRenderingContext2D::strokeRect):

        Reviewed by Geoff.

        Test case for http://bugs.webkit.org/show_bug.cgi?id=11251

        * fast/canvas/zero-size-fill-rect-expected.checksum: Added.
        * fast/canvas/zero-size-fill-rect-expected.png: Added.
        * fast/canvas/zero-size-fill-rect-expected.txt: Added.
        * fast/canvas/zero-size-fill-rect.html: Added.



Canonical link: https://commits.webkit.org/14279@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@16993 268f45cc-cd09-0410-ab3c-d52691b4dbfc